CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(Mong)

Include(CMakeModules/CPM.cmake)

CPMAddPackage(
        NAME Cup
        VERSION 2020.523
        GITHUB_REPOSITORY Andres6936/Cup
)

ADD_EXECUTABLE(Mong main.cpp)
SET_TARGET_PROPERTIES(Mong PROPERTIES CXX_STANDARD 17)
TARGET_LINK_LIBRARIES(Mong PRIVATE Cup)
